overflow fix

--- a/hello-child-hello-elementor-child/style.css
+++ b/hello-child-hello-elementor-child/style.css
@@ -18,3 +18,7 @@ figure.gallery-item {
 h2.elementor-heading-title.elementor-size-default {
     font-style: initial;
 }
+
+body.page-template-default.page.page-id-7.wp-custom-logo.elementor-default.elementor-kit-5.elementor-page.elementor-page-7.e--ua-blink.e--ua-chrome.e--ua-webkit {
+    overflow-x: hidden;
+}
